2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.[ch]: removed level from
	GimpDisplayShell struct.

	* app/display/gimpdisplayshell-render.c: fixed rendering of the mask.
	Closes bug #448417 again.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolorpanel.[ch]: reverted the live update change
	from bug #451568. It causes breakage such as bug #484757.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/config/gimpdisplayconfig.[ch]
	* app/config/gimprc-blurbs.h
	* app/display/display-enums.[ch]
	* app/display/gimpdisplayshell-handlers.c
	* app/display/gimpdisplayshell-render.c: allow to configure the
	display zoom quality.

	* app/display/gimpdisplayshell-transform.c: formatting. 

2007-10-08  Raphaël Quinet  <raphael@gimp.org>

	* authors.xml: Added Peter Sikking as author (we do not have a
	more appropriate category for interface architects).

2007-10-07  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.c: use a neutral gray as the
	default out-of-gamut warning color.

2007-10-06  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/poppler.c: Implement non-interactive mode, and make
	it match the old PDF loader API. Fixes bug #483425.

2007-10-06  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpeditselectiontool.c (gimp_edit_selection_tool_draw):
	check that there are segments to draw before calling
	gimp_draw_tool_draw_boundary().

2007-10-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-colormap.c (gimp_image_set_colormap): don't
	delete the colormap on indexed images. Fixes bug #483887.

2007-10-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-colormap.c (gimp_image_set_colormap): set all
	entries to zero before assigning the new colormap.

	* app/paint-funcs/paint-funcs.[ch]: added const qualifiers.

2007-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: store the zoom factor. Doesn't
	work currently, but just needs a simple fix in gtkhtml2.
